--- a/spiderweb2/WebContent/WEB-INF/web.xml
+++ b/spiderweb2/WebContent/WEB-INF/web.xml
@@ -23,4 +23,10 @@
     <welcome-file>index.action</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/404.jsp</location>
+  </error-page>
+  
 </web-app>
