--- a/kuqi-Top/kuqi-Util/pom.xml
+++ b/kuqi-Top/kuqi-Util/pom.xml
@@ -39,5 +39,11 @@
 	    <artifactId>httpclient</artifactId>
 	</dependency>
 	
+	<!-- Gson -->
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	</dependency>
+	
   </dependencies>
 </project>
