--- a/kuqi-Top/kuqi-Web/src/main/webapp/WEB-INF/web.xml
+++ b/kuqi-Top/kuqi-Web/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,29 @@
   <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
   <context-param> 
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:application-dao.xml</param-value>
   </context-param>
+  
+  <filter>
+  		<filter-name>encodingFilter</filter-name>
+  		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  		<init-param>
+  		 	<param-name>encoding</param-name>
+  		 	<param-value>utf-8</param-value>
+  		</init-param>
+  		<init-param>
+  			<param-name>forceEncoding</param-name>
+  			<param-value>true</param-value>
+  		</init-param>
+  </filter>
+  
+  <filter-mapping>
+  		<filter-name>encodingFilter</filter-name>
+  		<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <servlet>
   
@@ -24,5 +43,4 @@
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
   
- 
 </web-app>
