--- a/kuqi-Top/pom.xml
+++ b/kuqi-Top/pom.xml
@@ -259,6 +259,28 @@
 	    <version>4.5.2</version>
 	</dependency>	
 	
+	<!-- Gson -->
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
+	
+	<!-- 上传文件依赖组件 -->
+	<dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.4</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.3.1</version>
+    </dependency>
+	
+	
+	
   	</dependencies>
   </dependencyManagement>
   
